--- a/website.html
+++ b/website.html
@@ -92,7 +92,7 @@
 				 </div>
 				 <div class="b">
 				 	<h5 class="resources">RESOURCES</h5>
-					<a href="#">Locations</a>
+					<a href="https://maps.google.com/">Locations</a>
 					<li>Tips</li>
 					<li>FAQs</li>
 					<li>Privacy & Terms</li>
