--- a/website2.html
+++ b/website2.html
@@ -30,6 +30,7 @@
 <input type="button" onclick="btn001()" class="submit" value="Submit">
 
 <p id="message001"></p>
+<input type="button" onclick="end()" class="submit" value="Click to Continue">
 </div>
 </div>
 	    <script type="text/javascript" src="java.js"></script>
